# humble-control-center

./: .dockerignore  .gitignore  README.md  agents.md  package.json  pyproject.toml
desktop/tauri-app/: bootstrap.ps1  bootstrap.sh  index.html  package-lock.json  package.json
desktop/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop/tauri-app/src-tauri/src/: main.rs
docker/: Dockerfile  docker-compose.yml
humblebundle_downloader/: asset_db.py  cli.py  download_library.py  library_index.py  state.py  ui_server.py
humblebundle_downloader/web/static/: home.html  index.html  item.html  library.html  settings.html
react-ui/: index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.mts
react-ui/src/: App.tsx  api.ts  styles.css
react-ui/src/components/: AssetCard.tsx  Layout.tsx  SessionBadge.tsx
react-ui/src/pages/: Admin.tsx  Bundle.tsx  Home.tsx  ItemPage.tsx  Library.tsx  Purchases.tsx  Settings.tsx
react-ui/tests/: smoke.spec.ts
